Add file uploads, set default state backend to boltdb
